# trading-winner

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/config/: settings.py
backend/app/engines/: execution_engine.py  exit_engine.py  market_regime_engine.py  reconciliation_engine.py  risk_engine.py  safety_engine.py  scoring_engine.py  universe_filter_engine.py
backend/app/models/: ai.py  entities.py  enums.py
backend/app/repositories/: firestore_store.py  repositories.py
backend/app/services/: ai_provider.py  ai_service.py  broker.py  embedding_provider.py  execution_service.py  feature_service.py  ibkr_broker.py  ibkr_market_data.py  integrity_service.py  market_data.py  market_regime_service.py  openai_provider.py  pipeline_service.py  position_monitor_service.py  reconciliation_service.py  regime_data.py  retrieval_service.py  risk_service.py  signal_service.py  trading_guard_service.py
backend/app/utils/: ids.py  indicators.py  metrics.py
backend/app/workers/: daily_pipeline.py  learning_job.py
backend/scripts/: verify_firestore_access.py
backend/tests/integration/: test_ai_pipeline.py  test_api.py  test_backtests_api.py  test_daily_pipeline_worker.py  test_fundamental_regime_pipeline.py  test_phase4_execution.py  test_phase5_position_monitor.py  test_phase5_reconciliation.py  test_phase5_trading_guard.py  test_phase6_learning_loop.py
backend/tests/unit/: test_ai_retrieval.py  test_ai_service.py  test_backend_selection.py  test_backtest_engine.py  test_broker_positions.py  test_catalyst_engine.py  test_embedding_provider.py  test_engines.py  test_execution_service.py  test_ids.py  (+24 more)
(+41 files in other folders)
